1.4 beta 1
==========
(Larry Stone)
- SF Patch #1254679 Plugin Manager implementation

(Henry Jerez (LANL))
- SF Patch #1246928 DIDL plug-in for DSpace

(Robert Tansley)
- SF Patch #1244813 Expose METS to OAI-PMH harvesters
- SF Patch #1209318 Configurable Lucene Analyzer, Chinese search

(Tim Donohue)
- SF Patch #1274250 Fix Malformed METS metadata export

1.3.2 final, 1.3.2 beta 2
=========================
(John Rae)
- (SF Patch #1297575) Oracle compatibility fixes

1.3.2 beta 1
============
(Robert Tansley)
- SF patch #1252068  Configure metadata fields shown on simple item display

(Naveed Hashmi)
- (SF Patch #1230956) DSpace UI XHTML/WAI compliant

(Robert Tansley)
- Bug fix: Item exporter now correctly exports metadata in UTF-8
- Bug fix: Item.addDC() fixed to handle 'null' values passed in (previously threw
NullPointerException).  Note: the null value is added as a DC field.  Another
possibility would be to ignore/remove the null value -- would this be better,
or are null values OK?

1.3.1 final
===========
(Robert Tansley)
- Fixed bug 1252153 - Error on fresh install


1.3 final
=========
(Scott Yeadon)
- Updated Xerces, Xalan and oaicat jar files

(Richard Jones)
- New configuration option, webui.licence_bundle.show -- configures display
of deposit license in item display page

(Scott Yeadon)
 - SF Bug #1247508  Error when browsing item with no content/bitstream
 
(Nathan Sarr)
- One invalid email address no longer aborts whole subscription email process.
Error is logged and emailing continues.  SF patch #1246158; fixes SF bug
#1245223

(Robert Tansley)
- Rearranged format level display tags.  Bizarrely, this fixes
#1238277 (unsure why!!)
- Double quotes in metadata values are changed to HTML entities
before adding to form.  Fixes bug SF #1238276.
- Minor HTMLfixes to ws-main.jsp
- Error reported when uploading zero-length files.  This is the only apparent
way to tell when an invalid filename has been specified in the upload form.
Fixes bug SF #1242548
