@@ -446,3 +446,11 @@ ldap.enable = false
 # the LDAP directory.  If the field is not found the field
 # will be left blank in the new eperson object.
 #ldap.phone_field = telephoneNumber
+
+#### Media Filter plugins (through PluginManager)
+
+plugin.named.org.dspace.app.mediafilter.MediaFilter = \
+        org.dspace.app.mediafilter.PDFFilter  = Adobe PDF \
+        org.dspace.app.mediafilter.HTMLFilter = HTML, Text \
+        org.dspace.app.mediafilter.WordFilter = Microsoft Word \
+        org.dspace.app.mediafilter.JPEGFilter = GIF, JPEG, image/png
